--- a/H&M/Venetian.html
+++ b/H&M/Venetian.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+<meta charset="UTF-8">
+
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
 
 <!-- Adform API Script -->
@@ -2152,11 +2154,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 53px; height: 37px;
-        -ms-transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 53px; height: 33px;
+        -ms-transform: translate(0, 0) translate(267px, 448px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(267px, 448px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(267px, 448px) rotate(0deg);
+        transform: translate(0, 0) translate(267px, 448px) rotate(0deg);
 }
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
@@ -2219,44 +2221,44 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 100px;
-        -ms-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
-        transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 322px; height: 93px;
+        -ms-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
 #i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 160px; height: 45px;
-        -ms-transform: translate(0, 0) translate(80px, 387px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(80px, 387px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(80px, 387px) rotate(0deg);
-        transform: translate(0, 0) translate(80px, 387px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
+        transform: translate(0, 0) translate(80px, 401px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 25px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 272px; height: 65px;
-        -ms-transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 65px;
+        -ms-transform: translate(0, 0) translate(13px, 266px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(13px, 266px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(13px, 266px) rotate(0deg);
+        transform: translate(0, 0) translate(13px, 266px) rotate(0deg);
 }
 /*#/#*//*#i65.text.css:text/base/css*/
 #i65 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i65.i66.positioning.css:positioning/base/css.2*/
 #i65 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 302px; height: 38px;
-        -ms-transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(9px, 312px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 312px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 312px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 312px) rotate(0deg);
 }
 /*#/#*//*#i68.shape.css:shape/base/css*/
 #i68 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 70.41666666666667%;
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 73.125%;
         -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
@@ -2266,11 +2268,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i73 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
-#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 22.083333333333332%;
-        -ms-transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 337px) rotate(0deg);
+#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 18.958333333333332%;
+        -ms-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2281,7 +2283,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/l2e1rqF.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/2YYIdh8.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/bfHVGcj.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
@@ -2297,9 +2299,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡Un lugar para gente con estilo!</div>
+<div id="i63">¡¡Apertura el 25 de Febrero en La Isla Mérida!!</div>
 <!--#/#--><!--#i65.text.html:text/html-->
-<div id="i65">¡Ven a H&M y encuentra tu look ideal!</div>
+<div id="i65">Se de los 100 primeros en la fila y llévate una tarjeta regalo de 300 MXN</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
 <!--#/#--><!--#i73.shape.html:shape/html-->
@@ -2421,7 +2423,7 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: l2e1rqF.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 2YYIdh8.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: bfHVGcj.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
@@ -2435,23 +2437,23 @@ data: /*!*/{}/*!*/;
 name: P2bTbkX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":false}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
 name: kwxr1mX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
+data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
 name: ViMLmas.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ¡Un lugar para gente con estilo!; customName: false;
+name: ¡¡Apertura el 25 de Febrero en La Isla Mérida!!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i65.text.meta:text/meta*/
-name: ¡Ven a H&M y encuentra tu look ideal!; customName: false;
+name: Se de los 100 primeros en la fila y llévate una tarjeta regalo de 300 MXN; customName: false;
 /*#/#*//*#i65.i66.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.shape.meta:shape/meta*/
