--- a/H&M/hover-text-big2.html
+++ b/H&M/hover-text-big2.html
@@ -18,6 +18,14 @@
     padding: 0;
     font-family: Source Sans Pro;
 }
+
+.imgBx:before{
+    content: "";
+    width: 298px;
+    height: 598px;
+    position: absolute;
+}
+
 .card {
     position: absolute;
     top: 50%;
@@ -103,7 +111,7 @@
 
             <div class="imgBx">
                 
-              <iframe  src="fade-completo.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+              <iframe  src="fade-hover.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
