--- a/La costena/videobigprueba.html
+++ b/La costena/videobigprueba.html
@@ -310,10 +310,10 @@
            
         <div class="tgx_text">
             <span class="tgx_text_title tgx_text_bold">
-              ¿ Aún no sabes que cocinar? Descubre todo lo que puedes cocinar con nuestros Frijoles Bayos. Haz tu vida más fácil con La Costeña.
+              ¿ Aún no sabes qué cocinar? Descubre todo lo que puedes cocinar con nuestros Frijoles Bayos. Haz tu vida más fácil con La Costeña.
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: 10px; text-align: justify;"> <B>Los Frijoles Bayos,</B> de suave textura y sabor, son ideales para acompañar tus platillos méxicanos. ¡Mira nuestra<B>variedad de recetas</B>para tí! <B></p>
+                <p style="margin-top: 10px; text-align: justify;"> <B>Los Frijoles Bayos,</B> de suave textura y sabor, son ideales para acompañar tus platillos méxicanos. ¡Mira nuestra<B> variedad de recetas </B>para tí! <B></p>
             </span>
  
            
