--- a/H&M/Venetian.html
+++ b/H&M/Venetian.html
@@ -2299,7 +2299,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¡¡Apertura el 25 de Febrero en La Isla Mérida!!</div>
 <!--#/#--><!--#i65.text.html:text/html-->
-<div id="i65">Se de los 100 primeros en la fila y llévate una tarjeta regalo de 300 MXN</div>
+<div id="i65">Sé de los 100 primeros en la fila y llévate una tarjeta regalo de 300 MXN</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/P2bTbkX.jpg"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
