--- a/NH HOTELS/Cube2.html
+++ b/NH HOTELS/Cube2.html
@@ -695,11 +695,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i236.i237.positioning.css:positioning/base/css.2*/
-#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 160px; height: 43px;
-        -ms-transform: translate(0, 0) translate(70px, 104px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(70px, 104px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(70px, 104px) rotate(0deg);
-        transform: translate(0, 0) translate(70px, 104px) rotate(0deg);
+#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 40px;
+        -ms-transform: translate(0, 0) translate(75px, 104px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(75px, 104px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(75px, 104px) rotate(0deg);
+        transform: translate(0, 0) translate(75px, 104px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -756,7 +756,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/eqTzhi4.jpg"/>
+<img id="i130" src="https://i.imgur.com/hbzhq9S.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -768,7 +768,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/PDl5kTC.jpg"/>
 <!--#/#--><!--#i5.i236.image.html:image/html-->
-<img id="i236" src="https://i.imgur.com/AujHF9J.png"/>
+<img id="i236" src="https://i.imgur.com/4RkfFmx.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -778,7 +778,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/ZNsSie3.jpg"/>
+<img id="i234" src="https://i.imgur.com/UdsCPJE.jpg"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -918,7 +918,7 @@ customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i236.image.meta:image/meta*/
-name: AujHF9J.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 4RkfFmx.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i236.i237.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
