--- a/NH HOTELS/Cube.html
+++ b/NH HOTELS/Cube.html
@@ -915,7 +915,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/ujQO090.jpg"/>
 <!--#/#--><!--#i4.i236.image.html:image/html-->
-<img id="i236" src="https://i.imgur.com/AujHF9J.png"/>
+<img id="i236" src="https://i.imgur.com/4RkfFmx.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i188.image.html:image/html-->
@@ -937,7 +937,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i198.image.html:image/html-->
 <img id="i198" src="https://i.imgur.com/usM3xot.png"/>
 <!--#/#--><!--#i5.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/AujHF9J.png"/>
+<img id="i234" src="https://i.imgur.com/4RkfFmx.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i208.image.html:image/html-->
@@ -959,7 +959,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i200.image.html:image/html-->
 <img id="i200" src="https://i.imgur.com/usM3xot.png"/>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
-<img id="i232" src="https://i.imgur.com/AujHF9J.png"/>
+<img id="i232" src="https://i.imgur.com/4RkfFmx.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i212.image.html:image/html-->
@@ -1079,7 +1079,8 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
- /*#/#*//*#i5.i58.image.js:image/base/js*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i198.image.js:image/base/js*/
 
@@ -1150,7 +1151,8 @@ if ('click' === 'click') {
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-
+/*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i200.image.js:image/base/js*/
@@ -1163,7 +1165,11 @@ bmShow('i200');
 bmShow('i232');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i99').addEventListener('click', function(e){
+    /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/fHE3Bzbuezo'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i212.image.js:image/base/js*/
 
 /*#/#*//*#i212.i213.positioning.js:positioning/base/js.2*/
@@ -1219,7 +1225,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-   
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -1266,7 +1272,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i236.image.meta:image/meta*/
-name: AujHF9J.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 4RkfFmx.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i236.i237.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1310,7 +1316,7 @@ customName: false;
 /*#/#*//*#i198.i199.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i234.image.meta:image/meta*/
-name: AujHF9J.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 4RkfFmx.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i234.i235.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1354,7 +1360,7 @@ customName: false;
 /*#/#*//*#i200.i201.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i232.image.meta:image/meta*/
-name: AujHF9J.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 4RkfFmx.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i232.i233.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
