--- a/NH HOTELS/Venetian2.html
+++ b/NH HOTELS/Venetian2.html
@@ -2228,13 +2228,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/S9LoPme.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/9IJfoDs.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/BwavyPa.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/Cvd6Cdk.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/khSujbH.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/CaqyAHS.jpg"></dataimg>
 <!--#/#--><!--#i2.i75.slice-image.html:slice-image/html.1-->
-<dataimg id="i75" src="https://i.imgur.com/4pqfWWB.jpg"></dataimg>
+<dataimg id="i75" src="https://i.imgur.com/HtMNDdG.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i71.shape.html:shape/html-->
@@ -2293,7 +2293,11 @@ document.addEventListener('DOMContentLoaded', function() {
 /* Name: On Click; */
 var el = document.getElementById('i2');
 
-
+el.addEventListener('click', function(e){
+    /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/D2RaGaWDJz32'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -2334,13 +2338,13 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: S9LoPme.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 9IJfoDs.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: BwavyPa.jpg; fileId: ; sourceTypeId: externalUrl;
+name: Cvd6Cdk.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: khSujbH.jpg; fileId: ; sourceTypeId: externalUrl;
+name: CaqyAHS.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i75.slice-image.meta:slice-image/meta.1*/
-name: 4pqfWWB.jpg; fileId: ; sourceTypeId: externalUrl;
+name: HtMNDdG.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
