--- a/NH HOTELS/Cube.html
+++ b/NH HOTELS/Cube.html
@@ -911,7 +911,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/usM3xot.png"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Descanso,  vacaciones y alta Cocina que te hará agua la boca.</div>
+<div id="i14">Descanso, vacaciones y alta cocina que te hará agua la boca.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/ujQO090.jpg"/>
 <!--#/#--><!--#i4.i236.image.html:image/html-->
@@ -1079,7 +1079,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i198.image.js:image/base/js*/
@@ -1152,7 +1152,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i200.image.js:image/base/js*/
