--- a/KFC/fade-completo.html
+++ b/KFC/fade-completo.html
@@ -351,10 +351,10 @@
 <body class="value">
        <div class="te-container">
        
-       <div class="cta"> <img src="https://i.imgur.com/wG4ythi.png" style="height: 45px;"></a></div>
+       <div class="cta" ><a href=" https://goo.gl/maps/CnYn9uRgSMP2" target="_blank">  <img src="https://i.imgur.com/Zl1fKYO.png" style="height: 45px;"></a></div>
 
 
-       <a href="https://www.facebook.com/pg/HeladosPopsy/posts/?ref=page_internal" target="_blank">
+       <a href="https://www.kfc.com.mx/" target="_blank">
     
    
   
