--- a/KFC/fade-completo.html
+++ b/KFC/fade-completo.html
@@ -81,20 +81,20 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/gV63gaH.png");
+            background: url("https://i.imgur.com/C7bmcNS.png");
             background-size: cover;
 
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/08IfrVe.png");
+            background: url("https://i.imgur.com/2rqWu5B.png");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/j1QzXHY.png");
+            background: url("https://i.imgur.com/uQqJ1H8.png");
             background-size: cover;
           
         }
