--- a/KFC/Venetian.html
+++ b/KFC/Venetian.html
@@ -2285,7 +2285,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/Zl1fKYO.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Todos tenemos un gusto culposo</div>
+<div id="i63">Todos tenemos un gusto culposo.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">¡Es momento de ir a KFC!</div>
 <!--#/#--><!--#i70.shape.html:shape/html-->
