--- a/Liverpool/Venetian.html
+++ b/Liverpool/Venetian.html
@@ -2285,7 +2285,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/EZfqNTK.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡No dejes pasar La Gran Barata de Invierno!</div>
+<div id="i63">¡No dejes pasar la #GranBarata de Invierno!</div>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">¡Es hora de venir a Liverpool El Dorado con promociones hasta el 60% de descuento !</div>
 <!--#/#--><!--#i75.image.html:image/html-->
